# awesomecv_jinja

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
dev/scripts/: check_templates.py  prepare_readme.py
docs/: awesomecv_tpl_vars.md  cli_usage.md  docker_setup.md  educational_use.md  index.md  promt_awesomecv.md  promt_new_tpl.md  publishing.md
docs/adr/: 0001-custom-jinja2-delimiters.md  0002-upstream-repository-management.md  0003-terminology-and-structure.md  0004-section-reuse-via-includes.md  README.md  template.md
examples/: cli_demo.sh  demo.py  example_cli.yaml  pdf_example.py
src/awesomecv_jinja/: __init__.py  cli.py  compiler.py  config.py  exceptions.py  pipeline.py  renderer.py  samples.py
src/awesomecv_jinja/templates/awesome_cv/: coverletter.tex.j2  cv.tex.j2  resume.tex.j2
src/awesomecv_jinja/templates/awesome_cv/sections/: certificates.tex.j2  committees.tex.j2  education.tex.j2  experience.tex.j2  extracurricular.tex.j2  honors.tex.j2  presentation.tex.j2  skills.tex.j2  summary.tex.j2  writing.tex.j2
tests/: conftest.py  test_samples.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_compiler.py  test_config.py  test_renderer.py
